# jigdo

./: .cvsignore  .gitignore  Makefile.in  README  README.md  THANKS  changelog  configure.ac  configure.in  jigdo.glade  jigdo.gladep  jigdo.spec  upd.sh
deb/: .cvsignore  control  copyright  install-build-deps.sh  jigdo-file.docs  jigdo.undocumented  rules
doc/: .cvsignore  .gitignore  BuildOnWindows.txt  Hacking.txt  Makefile.in  README-bindist.txt  README-windist.txt  TechDetails.txt  debian-jigdo-mini-howto.sgml  jigdo-file.sgml  jigdo-lite.sgml  jigdo-mirror.sgml  jigdo.sgml
gfx/: jigdo-gnomish-buttons.xcf.bz2  jigdo-logo.xcf.bz2
po/: .cvsignore  Makefile.in  de.po  jigdo.pot
scripts/: convert-cvsmirrors.awk  debian-mirrors.jigdo  depend.awk  glade-filter.awk  html-beautify.awk  jigdo-lite  jigdo-mirror  longrun  make-templates  win-lib-install.sh
src/: .cvsignore  .gitignore  Doxyfile  Makefile.in  cachefile.cc  cachefile.hh  compat.cc  compat.hh  config.h.in  configfile-test.cc  configfile.cc  configfile.hh  dirent.hh  glibc-md5.cc  glibc-md5.hh  jigdo-file-cmd.cc  jigdo-file-cmd.hh  jigdo-file.cc  jigdo.rc  jigdoconfig-test.cc  jigdoconfig.cc  jigdoconfig.fh  jigdoconfig.hh  md5sum-test.cc  md5sum.fh  md5sum.hh  md5sum.ih  mimestream-test.cc  mimestream.hh  mkimage.cc  mkimage.hh  mkjigdo.cc  mktemplate-funcs.sh  mktemplate-test1.sh  mktemplate-test2.sh  mktemplate-test3.sh  mktemplate.cc  mktemplate.hh  partialmatch.cc  partialmatch.hh  (+19 more)
src/glibcurl/: Makefile  glibcurl-example.c  glibcurl.c  glibcurl.h
src/gtk/: .cvsignore  gtk-makeimage.cc  gtk-makeimage.hh  gtk-single-url.cc  gtk-single-url.hh  gui.cc  gui.hh  jigdo.cc  jobline.cc  jobline.fh  jobline.hh  joblist.cc  joblist.hh  messagebox.cc  messagebox.hh  support.cc  support.hh  treeiter.cc  treeiter.hh
src/job/: cached-url.cc  cached-url.hh  datasource.cc  datasource.hh  jigdo-io-test.cc  jigdo-io.cc  jigdo-io.fh  jigdo-io.hh  jigdodownload.cc  jigdodownload.hh  job.hh  makeimage.cc  makeimage.hh  makeimagedl-graph-test.cc  makeimagedl-graph.cc  makeimagedl-info-test.cc  makeimagedl-info.cc  makeimagedl.cc  makeimagedl.fh  makeimagedl.hh  single-url.cc  single-url.hh  url-mapping-test.cc  url-mapping.cc  url-mapping.fh  url-mapping.hh
src/net/: download-test.cc  download.cc  download.hh  glibwww-callbacks.cc  glibwww-init.cc  glibwww-trans.cc  glibwww.hh  libwww-HTFTP.c  libwww-HTHost.c  libwww.hh  proxyguess-test.cc  proxyguess.cc  proxyguess.hh  proxyguesstest.cc  uri-test.cc  uri.cc  uri.hh
src/util/: autonullptr-test.cc  autonullptr.hh  autoptr.hh  bstream-counted.hh  bstream.cc  bstream.hh  configfile-test.cc  configfile.cc  configfile.hh  debug.cc  debug.hh  glibc-getopt.c  glibc-getopt.h  glibc-getopt1.c  glibc-md5.cc  gunzip-test.cc  gunzip.cc  gunzip.hh  gunziptest.cc  ilist.hh  log-test.cc  log.cc  log.hh  logtest.cc  md5sum-test.cc  md5sum.cc  md5sum.fh  md5sum.hh  md5sum.ih  mimestream-test.cc  mimestream.hh  nocopy.hh  progress.cc  progress.fh  progress.hh  random.cc  rsyncsum-test.cc  rsyncsum.cc  rsyncsum.hh  rsyncsum.ih  (+9 more)
